--- a/PortfolioBuilder/templates/update_skill.html
+++ b/PortfolioBuilder/templates/update_skill.html
@@ -34,7 +34,7 @@
                         <div class="row justify-content-center">
                             <div class="col-md-12 text-center">
                                 <div class="btn-group" role="group" aria-label="Buttons">
-                                    <input class="btn btn-primary mx-2" type="submit" value="Save">
+                                    <input class="btn btn-primary mx-2" type="submit" value="Update">
                                     {% comment %} <a href="{% url 'Home:skill_details_page' slug %}" class="btn btn-primary mx-2">View skills</a> {% endcomment %}
                                 </div>
                             </div>
@@ -46,55 +46,3 @@
     </div>
 </div>
 {% endblock %}
-
-{% comment %} {% extends 'base.html' %}
-
-
-{% block title %}
-update skill
-        {% endblock %}
-{% block content %}
-<div class="container" style="margin-top:50px; margin-bottom:50px;">
-    <div class="row">
-        <div class="col-md-5">
-              <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingOne">
-            <h4 class="panel-title text-white">
-                <strong>Instructions</strong>
-            </h4>
-        </div>
-        <div class="panel-body">
-             <ul>
-                 <li><p><strong>Write things carefully</strong></p></li>
-                 <li><p><strong>In percentage field tell us about your level in that skill if you are beginner write between 0-40 if intermediate write between 41-80 and if you are pro write between 80-100 </strong></p></li>
-             </ul>
-         </div>
-    </div>
-        </div>
-
-        <div class="col-md-5">
-            <div class="card-header bg-info mt-2"><strong>Update your skill</strong></div>
-            <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-               <label for="id_skill">Skill:</label>
-               <div class="form-group">
-                   <input type="text" class="form-control" value="{{form.skill.value}}" required name="skill" maxlength="50" id="id_skill">
-               </div>
-               <label for="id_percent">Percent:</label>
-               <div class="form-group">
-                   <input type="number" class="form-control" value="{{form.percent.value}}" step="0.01" name="percent" required id="id_percent">
-               </div>
-                <div class="form-group">
-                    <input class="button btn-info" type="submit" value="Update">
-                </div>
-            </form>
-        </div>
-
-    </div>
-
-
-
-
-</div>
-{% endblock %} {% endcomment %}
-
