added delete skills and minor UI fixes

--- a/PortfolioBuilder/templates/add_experience_form.html
+++ b/PortfolioBuilder/templates/add_experience_form.html
@@ -67,6 +67,6 @@ Add experience
                 </form>
             </div>
         </div>
-    </div>
+    </div><br><br>
 </div>
 {% endblock content %}
